--- a/landing-page/css/scss/composer/style.scss
+++ b/landing-page/css/scss/composer/style.scss
@@ -7,4 +7,5 @@
 @import "../module/_section-pricing.scss";
 @import "../module/section-testimony.scss";
 @import "../module/icons-animated.scss";
+@import "../module/tooltip.scss";
 @import "../module/footer.scss";
