--- a/landing-page/css/style.css
+++ b/landing-page/css/style.css
@@ -1502,6 +1502,7 @@ section {
   font-size: 18px;
 }
 .btn:hover {
+  cursor: pointer;
   -webkit-box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.05);
   -o-box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.05);
