--- a/urbanstory/src/components/button.html
+++ b/urbanstory/src/components/button.html
@@ -1,119 +1,158 @@
 <div class="container-fluid">
 	<h1>Button</h1>
-	<h4>Visual Loudness Guide</h4>
-	<table class="table-comfort align-left">
-		<thead>
-			<tr>
-				<th>Button/Link</th>
-				<th>Type</th>
-				<th>Volume</th>
-				<th>Frequency</th>
-				<th>Use</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>
-					<button class="btn btn-firm">Button</button>
-				</td>
-				<td>Button</td>
-				<td>Cheer</td>
-				<td>Often</td>
-				<td>Primary Button</td>
-			</tr>
-			<tr>
-				<td>
-					<button class="btn btn-firm-o">Button</button>
-				</td>
-				<td>Button</td>
-				<td>Murmur</td>
-				<td>Occasionally</td>
-				<td>Secondary Button</td>
-			</tr>
-			<tr>
-				<td>
-					<button class="btn btn-success">Button</button>
-				</td>
-				<td>Button</td>
-				<td>Shout</td>
-				<td>Selectively</td>
-				<td>Action, save</td>
-			</tr>
-			<tr>
-				<td>
-					<button class="btn btn-median">Button</button>
-				</td>
-				<td>Button</td>
-				<td>Substitute</td>
-				<td>Occasionally</td>
-				<td>Tertiary Button</td>
-			</tr>
-			<tr>
-				<td>
-					<button class="btn btn-danger">Button</button>
-				</td>
-				<td>Button</td>
-				<td>Yell</td>
-				<td>Rare</td>
-				<td>Delete Confirmation</td>
-			</tr>
-			<tr>
-				<td>
-					<button class="btn btn-disabled">Button</button>
-				</td>
-				<td>Button</td>
-				<td>Mute</td>
-				<td>Occasionally</td>
-				<td>Disabled</td>
-			</tr>
-			<tr>
-				<td>
-					<a href="#!" class="link-primary">Primary</a>
-				</td>
-				<td>Link</td>
-				<td>Whistle</td>
-				<td>Often</td>
-				<td>Primary text link</td>
-			</tr>
-			<tr>
-				<td>
-					<a href="#!" class="link-secondary">Secondary</a>
-				</td>
-				<td>Link</td>
-				<td>Whisper</td>
-				<td>Occasionally</td>
-				<td>Secondary text link</td>
-			</tr>
-		</tbody>
-	</table>
+	<section>
+		<h4>Visual Loudness Guide</h4>
+		<table class="table-comfort align-left">
+			<thead>
+				<tr>
+					<th>Button/Link</th>
+					<th>Type</th>
+					<th>Volume</th>
+					<th>Frequency</th>
+					<th>Use</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>
+						<button class="btn btn-firm">Button</button>
+					</td>
+					<td>Button</td>
+					<td>Cheer</td>
+					<td>Often</td>
+					<td>Primary Button</td>
+				</tr>
+				<tr>
+					<td>
+						<button class="btn btn-firm-o">Button</button>
+					</td>
+					<td>Button</td>
+					<td>Murmur</td>
+					<td>Occasionally</td>
+					<td>Secondary Button</td>
+				</tr>
+				<tr>
+					<td>
+						<button class="btn btn-success">Button</button>
+					</td>
+					<td>Button</td>
+					<td>Shout</td>
+					<td>Selectively</td>
+					<td>Action, save</td>
+				</tr>
+				<tr>
+					<td>
+						<button class="btn btn-median">Button</button>
+					</td>
+					<td>Button</td>
+					<td>Substitute</td>
+					<td>Occasionally</td>
+					<td>Tertiary Button</td>
+				</tr>
+				<tr>
+					<td>
+						<button class="btn btn-danger">Button</button>
+					</td>
+					<td>Button</td>
+					<td>Yell</td>
+					<td>Rare</td>
+					<td>Delete Confirmation</td>
+				</tr>
+				<tr>
+					<td>
+						<button class="btn btn-disabled">Button</button>
+					</td>
+					<td>Button</td>
+					<td>Mute</td>
+					<td>Occasionally</td>
+					<td>Disabled</td>
+				</tr>
+				<tr>
+					<td>
+						<button class="btn btn-prime">Button</button>
+					</td>
+					<td>Button</td>
+					<td>Cheer</td>
+					<td>Often</td>
+					<td>Primary button - <em>jobseekers</em></td>
+				</tr>
+				<tr>
+					<td>
+						<a href="#!" class="link-primary">Primary</a>
+					</td>
+					<td>Link</td>
+					<td>Whistle</td>
+					<td>Often</td>
+					<td>Primary text link</td>
+				</tr>
+				<tr>
+					<td>
+						<a href="#!" class="link-secondary">Secondary</a>
+					</td>
+					<td>Link</td>
+					<td>Whisper</td>
+					<td>Occasionally</td>
+					<td>Secondary text link</td>
+				</tr>
+			</tbody>
+		</table>
+	</section>
+	<section>
+		<h4>All Buttons</h4>
+		<h6>Button Firm</h6>
+		<button class="btn btn-firm btn-large">Button Large</button>
+		<button class="btn btn-firm">Button Default</button>
+		<button class="btn btn-firm btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-firm btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-firm&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-firm btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
 
-	<h4>All Buttons</h4>
-	<p>Button Firm</p>
-	<button class="btn btn-firm btn-large">Button Large</button>
-	<button class="btn btn-firm">Button Default</button>
-	<button class="btn btn-firm btn-small">Button Small</button>
-	<p>Button Firm Outlined</p>
-	<button class="btn btn-firm-o btn-large">Button Large</button>
-	<button class="btn btn-firm-o">Button Default</button>
-	<button class="btn btn-firm-o btn-small">Button Small</button>
-	<p>Button Median</p>
-	<button class="btn btn-median btn-large">Button Large</button>
-	<button class="btn btn-median">Button Default</button>
-	<button class="btn btn-median btn-small">Button Small</button>
-	<p>Button Prime</p>
-	<button class="btn btn-prime btn-large">Button Large</button>
-	<button class="btn btn-prime">Button Default</button>
-	<button class="btn btn-prime btn-small">Button Small</button>
-	<p>Button Success</p>
-	<button class="btn btn-success btn-large">Button Large</button>
-	<button class="btn btn-success">Button Default</button>
-	<button class="btn btn-success btn-small">Button Small</button>
-	<p>Button Danger</p>
-	<button class="btn btn-danger btn-large">Button Large</button>
-	<button class="btn btn-danger">Button Default</button>
-	<button class="btn btn-danger btn-small">Button Small</button>
-	<p>Button Disabled</p>
-	<button class="btn btn-disabled btn-large">Button Large</button>
-	<button class="btn btn-disabled">Button Default</button>
-	<button class="btn btn-disabled btn-small">Button Small</button>
+		<h6>Button Firm Outlined</h6>
+		<button class="btn btn-firm-o btn-large">Button Large</button>
+		<button class="btn btn-firm-o">Button Default</button>
+		<button class="btn btn-firm-o btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-firm-o btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-firm-o&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-firm-o btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+
+		<h6>Button Median</h6>
+		<button class="btn btn-median btn-large">Button Large</button>
+		<button class="btn btn-median">Button Default</button>
+		<button class="btn btn-median btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-median btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-median&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-median btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+
+		<h6>Button Prime</h6>
+		<button class="btn btn-prime btn-large">Button Large</button>
+		<button class="btn btn-prime">Button Default</button>
+		<button class="btn btn-prime btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-prime btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-prime&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-prime btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+
+		<h6>Button Success</h6>
+		<button class="btn btn-success btn-large">Button Large</button>
+		<button class="btn btn-success">Button Default</button>
+		<button class="btn btn-success btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-success btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-success&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-success btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+
+		<h6>Button Danger</h6>
+		<button class="btn btn-danger btn-large">Button Large</button>
+		<button class="btn btn-danger">Button Default</button>
+		<button class="btn btn-danger btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-danger btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-danger&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-danger btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+
+		<h6>Button Disabled</h6>
+		<button class="btn btn-disabled btn-large">Button Large</button>
+		<button class="btn btn-disabled">Button Default</button>
+		<button class="btn btn-disabled btn-small">Button Small</button>
+		<pre><code>&lt;button class=&quot;btn btn-disabled btn-large&quot;&gt;Button Large&lt;/button&gt;
+&lt;button class=&quot;btn btn-disabled&quot;&gt;Button Default&lt;/button&gt;
+&lt;button class=&quot;btn btn-disabled btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+	</section>
 </div>
