update button for link & type submit

--- a/urbanstory/src/components/button.html
+++ b/urbanstory/src/components/button.html
@@ -78,7 +78,7 @@
 				</tr>
 				<tr>
 					<td>
-						<a href="#!" class="link-primary">Primary</a>
+						<a class="link-primary">Primary</a>
 					</td>
 					<td>Link</td>
 					<td>Whistle</td>
@@ -154,5 +154,22 @@
 		<pre><code>&lt;button class=&quot;btn btn-disabled btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-disabled&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-disabled btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
+	</section>
+	<section>
+		<h4>Button Variants</h4>
+		<a href="#!" class="btn btn-median">Button link</a>
+		<button class="btn btn-median">Button type</button>
+		<input type="submit" class="btn btn-median" name="" value="Button submit">
+		<pre><code>&lt;a href=&quot;#!&quot; class=&quot;btn btn-median&quot;&gt;Button link&lt;/a&gt;
+&lt;button class=&quot;btn btn-median&quot;&gt;Button type&lt;/button&gt;
+&lt;input type=&quot;submit&quot; class=&quot;btn btn-median&quot; name=&quot;&quot; value=&quot;Button submit&quot;&gt;</code></pre>
+	</section>
+	<section>
+		<h4>Links</h4>
+		<a href="" class="link-primary">Link Primary</a>
+		<br>
+		<a href="" class="link-secondary">Link Secondary</a>
+		<pre><code>&lt;a href=&quot;#&quot; class=&quot;link-primary&quot;&gt;Link Primary&lt;/a&gt;
+&lt;a href=&quot;#&quot; class=&quot;link-secondary&quot;&gt;Link Secondary&lt;/a&gt;</code></pre>
 	</section>
 </div>
