--- a/urbanstory/src/components/avatar.html
+++ b/urbanstory/src/components/avatar.html
@@ -25,45 +25,67 @@
 
 	<hr>
 
-	<div class="avatar is-small">
+	<div class="avatar is-md">
 		<img src="https://randomuser.me/api/portraits/women/17.jpg">
 	</div>
 
-	<div class="avatar is-small">
-		<img src="https://urbanhire.s3-ap-southeast-1.amazonaws.com/companies/logo/fab12ba24bd4e797a54d4a79737f6ae8.png">
+	<div class="avatar is-md">
+		<img src="https://www.jphorizons.com/hs-fs/hubfs/2018%20JPH%20New%20Logo%20Cropped%20Transparent.png?width=1413&name=2018%20JPH%20New%20Logo%20Cropped%20Transparent.png">
 	</div>
 
-	<div class="avatar is-small">
+	<div class="avatar is-md">
 		<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
 	</div>
 
-	<div class="avatar is-small">
+	<div class="avatar is-md">
 		<span class="icon-user"></span>
 	</div>
 
-	<div class="avatar is-small">
+	<div class="avatar is-md">
 		<span>RN</span>
 	</div>
 
 	<hr>
 
-	<div class="avatar is-large">
+	<div class="avatar is-lg">
 		<img src="https://randomuser.me/api/portraits/women/17.jpg">
 	</div>
 
-	<div class="avatar is-large">
+	<div class="avatar is-lg">
 		<img src="https://urbanhire.s3-ap-southeast-1.amazonaws.com/companies/logo/fab12ba24bd4e797a54d4a79737f6ae8.png">
 	</div>
 
-	<div class="avatar is-large">
+	<div class="avatar is-lg">
 		<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
 	</div>
 
-	<div class="avatar is-large">
+	<div class="avatar is-lg">
 		<span class="icon-user"></span>
 	</div>
 
-	<div class="avatar is-large">
+	<div class="avatar is-lg">
+		<span>RN</span>
+	</div>
+
+	<hr>
+
+	<div class="avatar is-xl">
+		<img src="https://www.jphorizons.com/hs-fs/hubfs/2018%20JPH%20New%20Logo%20Cropped%20Transparent.png?width=1413&name=2018%20JPH%20New%20Logo%20Cropped%20Transparent.png">
+	</div>
+
+	<div class="avatar is-xl">
+		<img src="https://images.unsplash.com/photo-1509967419530-da38b4704bc6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1672&q=80">
+	</div>
+
+	<div class="avatar is-xl">
+		<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
+	</div>
+
+	<div class="avatar is-xl">
+		<span class="icon-user"></span>
+	</div>
+
+	<div class="avatar is-xl">
 		<span>RN</span>
 	</div>
 
