--- a/urbanstory/src/components/avatar.html
+++ b/urbanstory/src/components/avatar.html
@@ -25,6 +25,28 @@
 
 	<hr>
 
+	<div class="avatar is-sm">
+		<img src="https://randomuser.me/api/portraits/women/17.jpg">
+	</div>
+
+	<div class="avatar is-sm">
+		<img src="https://www.jphorizons.com/hs-fs/hubfs/2018%20JPH%20New%20Logo%20Cropped%20Transparent.png?width=1413&name=2018%20JPH%20New%20Logo%20Cropped%20Transparent.png">
+	</div>
+
+	<div class="avatar is-sm">
+		<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
+	</div>
+
+	<div class="avatar is-sm">
+		<span class="icon-user"></span>
+	</div>
+
+	<div class="avatar is-sm">
+		<span>RN</span>
+	</div>
+
+	<hr>
+
 	<div class="avatar is-md">
 		<img src="https://randomuser.me/api/portraits/women/17.jpg">
 	</div>
@@ -47,11 +69,11 @@
 
 	<hr>
 
-	<div class="avatar is-lg">
+	<div class="avatar is-lg is-o">
 		<img src="https://randomuser.me/api/portraits/women/17.jpg">
 	</div>
 
-	<div class="avatar is-lg">
+	<div class="avatar is-lg is-square">
 		<img src="https://urbanhire.s3-ap-southeast-1.amazonaws.com/companies/logo/fab12ba24bd4e797a54d4a79737f6ae8.png">
 	</div>
 
