add avatar group, and search bar

--- a/urbanstory/src/components/avatar.html
+++ b/urbanstory/src/components/avatar.html
@@ -2,6 +2,27 @@
 	<h1>Avatar</h1>
 </section>
 <section>
+	<h4>Avatar group</h4>
+	<div class="avatar-group">
+		<div class="avatar is-sm">
+			<img src="https://randomuser.me/api/portraits/women/11.jpg">
+		</div>
+		<div class="avatar is-sm">
+			<img src="https://randomuser.me/api/portraits/women/12.jpg">
+		</div>
+		<div class="avatar is-sm">
+			<img src="https://randomuser.me/api/portraits/women/13.jpg">
+		</div>
+		<div class="avatar is-sm">
+			<img src="https://randomuser.me/api/portraits/women/14.jpg">
+		</div>
+		<div class="avatar is-sm">
+			<img src="https://randomuser.me/api/portraits/women/15.jpg">
+		</div>
+	</div>
+	<hr>
+</section>
+<section>
 
 	<div class="avatar">
 		<img src="https://randomuser.me/api/portraits/women/17.jpg">
