--- a/urbanstory/src/components/avatar.html
+++ b/urbanstory/src/components/avatar.html
@@ -1,135 +1,191 @@
-<section class="page-hero">
+<div class="container-fluid">
+	<section class="page-hero">
 	<h1>Avatar</h1>
-</section>
-<section>
-	<h4>Avatar group</h4>
-	<div class="avatar-group">
-		<div class="avatar is-sm">
-			<img src="https://randomuser.me/api/portraits/women/11.jpg">
+	</section>
+	
+	<section>
+
+		<div class="avatar">
+			<img src="https://randomuser.me/api/portraits/women/17.jpg">
 		</div>
-		<div class="avatar is-sm">
-			<img src="https://randomuser.me/api/portraits/women/12.jpg">
+
+		<div class="avatar">
+			<img src="https://urbanhire.s3-ap-southeast-1.amazonaws.com/companies/logo/fab12ba24bd4e797a54d4a79737f6ae8.png">
 		</div>
-		<div class="avatar is-sm">
-			<img src="https://randomuser.me/api/portraits/women/13.jpg">
+
+		<div class="avatar">
+			<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
 		</div>
-		<div class="avatar is-sm">
-			<img src="https://randomuser.me/api/portraits/women/14.jpg">
+
+		<div class="avatar">
+			<span class="icon-user"></span>
 		</div>
-		<div class="avatar is-sm">
-			<img src="https://randomuser.me/api/portraits/women/15.jpg">
+
+		<div class="avatar">
+			<span>RN</span>
 		</div>
-	</div>
-	<hr>
-</section>
-<section>
 
-	<div class="avatar">
-		<img src="https://randomuser.me/api/portraits/women/17.jpg">
-	</div>
+		<hr>
 
-	<div class="avatar">
-		<img src="https://urbanhire.s3-ap-southeast-1.amazonaws.com/companies/logo/fab12ba24bd4e797a54d4a79737f6ae8.png">
-	</div>
+		<div class="avatar is-sm">
+			<img src="https://randomuser.me/api/portraits/women/17.jpg">
+		</div>
 
-	<div class="avatar">
-		<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
-	</div>
+		<div class="avatar is-sm">
+			<img src="https://www.jphorizons.com/hs-fs/hubfs/2018%20JPH%20New%20Logo%20Cropped%20Transparent.png?width=1413&name=2018%20JPH%20New%20Logo%20Cropped%20Transparent.png">
+		</div>
 
-	<div class="avatar">
-		<span class="icon-user"></span>
-	</div>
+		<div class="avatar is-sm">
+			<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
+		</div>
 
-	<div class="avatar">
-		<span>RN</span>
-	</div>
+		<div class="avatar is-sm">
+			<span class="icon-camera"></span>
+		</div>
 
-	<hr>
+		<div class="avatar is-sm">
+			<span>RN</span>
+		</div>
 
-	<div class="avatar is-sm">
-		<img src="https://randomuser.me/api/portraits/women/17.jpg">
-	</div>
+		<hr>
 
-	<div class="avatar is-sm">
-		<img src="https://www.jphorizons.com/hs-fs/hubfs/2018%20JPH%20New%20Logo%20Cropped%20Transparent.png?width=1413&name=2018%20JPH%20New%20Logo%20Cropped%20Transparent.png">
-	</div>
+		<div class="avatar is-md">
+			<img src="https://randomuser.me/api/portraits/women/17.jpg">
+		</div>
 
-	<div class="avatar is-sm">
-		<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
-	</div>
+		<div class="avatar is-md">
+			<img src="https://www.jphorizons.com/hs-fs/hubfs/2018%20JPH%20New%20Logo%20Cropped%20Transparent.png?width=1413&name=2018%20JPH%20New%20Logo%20Cropped%20Transparent.png">
+		</div>
 
-	<div class="avatar is-sm">
-		<span class="icon-user"></span>
-	</div>
+		<div class="avatar is-md">
+			<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
+		</div>
 
-	<div class="avatar is-sm">
-		<span>RN</span>
-	</div>
+		<div class="avatar is-md">
+			<span class="icon-user"></span>
+		</div>
 
-	<hr>
+		<div class="avatar is-md">
+			<span>RN</span>
+		</div>
 
-	<div class="avatar is-md">
-		<img src="https://randomuser.me/api/portraits/women/17.jpg">
-	</div>
+		<hr>
 
-	<div class="avatar is-md">
-		<img src="https://www.jphorizons.com/hs-fs/hubfs/2018%20JPH%20New%20Logo%20Cropped%20Transparent.png?width=1413&name=2018%20JPH%20New%20Logo%20Cropped%20Transparent.png">
-	</div>
+		<div class="avatar is-lg is-o">
+			<img src="https://randomuser.me/api/portraits/women/17.jpg">
+		</div>
 
-	<div class="avatar is-md">
-		<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
-	</div>
+		<div class="avatar is-lg is-square">
+			<img src="https://urbanhire.s3-ap-southeast-1.amazonaws.com/companies/logo/fab12ba24bd4e797a54d4a79737f6ae8.png">
+		</div>
 
-	<div class="avatar is-md">
-		<span class="icon-user"></span>
-	</div>
+		<div class="avatar is-lg">
+			<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
+		</div>
 
-	<div class="avatar is-md">
-		<span>RN</span>
-	</div>
+		<div class="avatar is-lg">
+			<span class="icon-user"></span>
+		</div>
 
-	<hr>
+		<div class="avatar is-lg">
+			<span>RN</span>
+		</div>
 
-	<div class="avatar is-lg is-o">
-		<img src="https://randomuser.me/api/portraits/women/17.jpg">
-	</div>
+		<hr>
 
-	<div class="avatar is-lg is-square">
-		<img src="https://urbanhire.s3-ap-southeast-1.amazonaws.com/companies/logo/fab12ba24bd4e797a54d4a79737f6ae8.png">
-	</div>
+		<div class="avatar is-xl">
+			<img src="https://www.jphorizons.com/hs-fs/hubfs/2018%20JPH%20New%20Logo%20Cropped%20Transparent.png?width=1413&name=2018%20JPH%20New%20Logo%20Cropped%20Transparent.png">
+		</div>
 
-	<div class="avatar is-lg">
-		<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
-	</div>
+		<div class="avatar is-xl">
+			<img src="https://images.unsplash.com/photo-1509967419530-da38b4704bc6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1672&q=80">
+		</div>
 
-	<div class="avatar is-lg">
-		<span class="icon-user"></span>
-	</div>
+		<div class="avatar is-xl">
+			<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
+		</div>
 
-	<div class="avatar is-lg">
-		<span>RN</span>
-	</div>
+		<div class="avatar is-xl">
+			<span class="icon-user"></span>
+		</div>
 
-	<hr>
+		<div class="avatar is-xl">
+			<span>RN</span>
+		</div>
 
-	<div class="avatar is-xl">
-		<img src="https://www.jphorizons.com/hs-fs/hubfs/2018%20JPH%20New%20Logo%20Cropped%20Transparent.png?width=1413&name=2018%20JPH%20New%20Logo%20Cropped%20Transparent.png">
-	</div>
+	</section>
+	<section>
+		<h4>Avatar group</h4>
+		<div class="avatar-group">
+			<div class="avatar">
+				<img src="https://randomuser.me/api/portraits/men/11.jpg">
+			</div>
+			<div class="avatar">
+				<img src="https://randomuser.me/api/portraits/women/8.jpg">
+			</div>
+			<div class="avatar">
+				<img src="https://randomuser.me/api/portraits/men/18.jpg">
+			</div>
+			<div class="avatar">
+				<img src="https://randomuser.me/api/portraits/women/21.jpg">
+			</div>
+			<div class="avatar">
+				<img src="https://randomuser.me/api/portraits/men/15.jpg">
+			</div>
+		</div>
+		<pre><code>&lt;div class=&quot;avatar-group&quot;&gt;
+	&lt;div class=&quot;avatar&quot;&gt;
+		&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;avatar&quot;&gt;
+		&lt;img src=&quot;https://randomuser.me/api/portraits/women/8.jpg&quot;&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;avatar&quot;&gt;
+		&lt;img src=&quot;https://randomuser.me/api/portraits/men/18.jpg&quot;&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;avatar&quot;&gt;
+		&lt;img src=&quot;https://randomuser.me/api/portraits/women/21.jpg&quot;&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;avatar&quot;&gt;
+		&lt;img src=&quot;https://randomuser.me/api/portraits/men/15.jpg&quot;&gt;
+	&lt;/div&gt;
+&lt;/div&gt;</code></pre>
 
-	<div class="avatar is-xl">
-		<img src="https://images.unsplash.com/photo-1509967419530-da38b4704bc6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1672&q=80">
-	</div>
+		<h4>Avatar group <code>.is-sm</code></h4>
+		<div class="avatar-group">
+			<div class="avatar is-sm">
+				<img src="https://randomuser.me/api/portraits/men/11.jpg">
+			</div>
+			<div class="avatar is-sm">
+				<img src="https://randomuser.me/api/portraits/women/8.jpg">
+			</div>
+			<div class="avatar is-sm">
+				<img src="https://randomuser.me/api/portraits/men/18.jpg">
+			</div>
+			<div class="avatar is-sm">
+				<img src="https://randomuser.me/api/portraits/women/21.jpg">
+			</div>
+			<div class="avatar is-sm">
+				<img src="https://randomuser.me/api/portraits/men/15.jpg">
+			</div>
+		</div>
+		<pre><code>&lt;div class=&quot;avatar-group&quot;&gt;
+	&lt;div class=&quot;avatar is-sm&quot;&gt;
+		&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;avatar is-sm&quot;&gt;
+		&lt;img src=&quot;https://randomuser.me/api/portraits/women/8.jpg&quot;&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;avatar is-sm&quot;&gt;
+		&lt;img src=&quot;https://randomuser.me/api/portraits/men/18.jpg&quot;&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;avatar is-sm&quot;&gt;
+		&lt;img src=&quot;https://randomuser.me/api/portraits/women/21.jpg&quot;&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;avatar is-sm&quot;&gt;
+		&lt;img src=&quot;https://randomuser.me/api/portraits/men/15.jpg&quot;&gt;
+	&lt;/div&gt;
+&lt;/div&gt;</code></pre>
 
-	<div class="avatar is-xl">
-		<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
-	</div>
-
-	<div class="avatar is-xl">
-		<span class="icon-user"></span>
-	</div>
-
-	<div class="avatar is-xl">
-		<span>RN</span>
-	</div>
-
-</section>
+	</section>
+</div>
