--- a/urbanstory/src/components/avatar.html
+++ b/urbanstory/src/components/avatar.html
@@ -4,114 +4,125 @@
 	</section>
 	
 	<section>
-
+		<h4>Avatar <small>(default)</small></h4>
 		<div class="avatar">
 			<img src="https://randomuser.me/api/portraits/women/17.jpg">
 		</div>
-
-		<div class="avatar">
-			<img src="https://urbanhire.s3-ap-southeast-1.amazonaws.com/companies/logo/fab12ba24bd4e797a54d4a79737f6ae8.png">
-		</div>
-
-		<div class="avatar">
-			<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
-		</div>
-
+		<br>
 		<div class="avatar">
 			<span class="icon-user"></span>
 		</div>
-
+		<br>
 		<div class="avatar">
 			<span>RN</span>
 		</div>
+		<pre><code>&lt;div class=&quot;avatar&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
+&lt;/div&gt;
 
-		<hr>
+&lt;div class=&quot;avatar&quot;&gt;
+	&lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
+&lt;/div&gt;
 
+&lt;div class=&quot;avatar&quot;&gt;
+	&lt;span&gt;RN&lt;/span&gt;
+&lt;/div&gt;</code></pre>
+
+		<h4>Avatar <code>.is-sm</code></h4>
 		<div class="avatar is-sm">
 			<img src="https://randomuser.me/api/portraits/women/17.jpg">
 		</div>
-
-		<div class="avatar is-sm">
-			<img src="https://www.jphorizons.com/hs-fs/hubfs/2018%20JPH%20New%20Logo%20Cropped%20Transparent.png?width=1413&name=2018%20JPH%20New%20Logo%20Cropped%20Transparent.png">
-		</div>
-
-		<div class="avatar is-sm">
-			<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
-		</div>
-
+		<br>
 		<div class="avatar is-sm">
 			<span class="icon-camera"></span>
 		</div>
-
+		<br>
 		<div class="avatar is-sm">
 			<span>RN</span>
 		</div>
+		<pre><code>&lt;div class=&quot;avatar is-sm&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
+&lt;/div&gt;
 
-		<hr>
+&lt;div class=&quot;avatar is-sm&quot;&gt;
+	&lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
+&lt;/div&gt;
 
+&lt;div class=&quot;avatar is-sm&quot;&gt;
+	&lt;span&gt;RN&lt;/span&gt;
+&lt;/div&gt;</code></pre>
+
+		<h4>Avatar <code>.is-md</code></h4>
 		<div class="avatar is-md">
 			<img src="https://randomuser.me/api/portraits/women/17.jpg">
 		</div>
-
-		<div class="avatar is-md">
-			<img src="https://www.jphorizons.com/hs-fs/hubfs/2018%20JPH%20New%20Logo%20Cropped%20Transparent.png?width=1413&name=2018%20JPH%20New%20Logo%20Cropped%20Transparent.png">
-		</div>
-
-		<div class="avatar is-md">
-			<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
-		</div>
-
+		<br>
 		<div class="avatar is-md">
 			<span class="icon-user"></span>
 		</div>
-
+		<br>
 		<div class="avatar is-md">
 			<span>RN</span>
 		</div>
+		<pre><code>&lt;div class=&quot;avatar is-md&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
+&lt;/div&gt;
 
-		<hr>
+&lt;div class=&quot;avatar is-md&quot;&gt;
+	&lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
+&lt;/div&gt;
 
+&lt;div class=&quot;avatar is-md&quot;&gt;
+	&lt;span&gt;RN&lt;/span&gt;
+&lt;/div&gt;</code></pre>
+
+		<h4>Avatar <code>.is-lg</code></h4>
 		<div class="avatar is-lg is-o">
 			<img src="https://randomuser.me/api/portraits/women/17.jpg">
 		</div>
-
-		<div class="avatar is-lg is-square">
-			<img src="https://urbanhire.s3-ap-southeast-1.amazonaws.com/companies/logo/fab12ba24bd4e797a54d4a79737f6ae8.png">
-		</div>
-
-		<div class="avatar is-lg">
-			<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
-		</div>
-
+		<br>
 		<div class="avatar is-lg">
 			<span class="icon-user"></span>
 		</div>
-
+		<br>
 		<div class="avatar is-lg">
 			<span>RN</span>
 		</div>
+		<pre><code>&lt;div class=&quot;avatar is-lg&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
+&lt;/div&gt;
 
-		<hr>
+&lt;div class=&quot;avatar is-lg&quot;&gt;
+	&lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
+&lt;/div&gt;
 
+&lt;div class=&quot;avatar is-lg&quot;&gt;
+	&lt;span&gt;RN&lt;/span&gt;
+&lt;/div&gt;</code></pre>
+
+		<h4>Avatar <code>.is-xl</code></h4>
 		<div class="avatar is-xl">
-			<img src="https://www.jphorizons.com/hs-fs/hubfs/2018%20JPH%20New%20Logo%20Cropped%20Transparent.png?width=1413&name=2018%20JPH%20New%20Logo%20Cropped%20Transparent.png">
+			<img src="https://randomuser.me/api/portraits/men/11.jpg">
 		</div>
-
-		<div class="avatar is-xl">
-			<img src="https://images.unsplash.com/photo-1509967419530-da38b4704bc6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1672&q=80">
-		</div>
-
-		<div class="avatar is-xl">
-			<img src="https://www.portraitprofessional.com/img/page-images/homepage/v18/slider/layers-B.jpg">
-		</div>
-
+		<br>
 		<div class="avatar is-xl">
 			<span class="icon-user"></span>
 		</div>
-
+		<br>
 		<div class="avatar is-xl">
 			<span>RN</span>
 		</div>
+		<pre><code>&lt;div class=&quot;avatar is-xl&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;avatar is-xl&quot;&gt;
+	&lt;span class=&quot;icon-user&quot;&gt;&lt;/span&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;avatar is-xl&quot;&gt;
+	&lt;span&gt;RN&lt;/span&gt;
+&lt;/div&gt;</code></pre>
 
 	</section>
 	<section>
@@ -187,5 +198,21 @@
 	&lt;/div&gt;
 &lt;/div&gt;</code></pre>
 
+	</section>
+	<section>
+		<h4>Avatar Variants</h4>
+		<div class="avatar is-square">
+			<img src="https://randomuser.me/api/portraits/men/11.jpg">
+		</div>
+		<br>
+		<div class="avatar is-o">
+			<img src="https://randomuser.me/api/portraits/men/11.jpg">
+		</div>
+		<pre><code>&lt;div class=&quot;avatar is-square&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
+&lt;/div&gt;
+&lt;div class=&quot;avatar is-o&quot;&gt;
+	&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
+&lt;/div&gt;</code></pre>
 	</section>
 </div>
