add built files

--- a/urbanstory/pages/components/toast.html
+++ b/urbanstory/pages/components/toast.html
@@ -58,15 +58,15 @@
 		<button class="btn btn-firm-o">Call Toast</button>
 		<div class="toast-fixed-wrapper">
 			<div class="toast is-info hide">
-				<p>Toast sample</p>
+				<p>Fixed toast sample</p>
 				<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
 			</div>
-			<div class="toast is-danger hide">
-				<p>Toast sample</p>
+			<div class="toast is-danger">
+				<p>Fixed toast sample</p>
 				<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
 			</div>
 			<div class="toast is-success hide">
-				<p>Toast sample</p>
+				<p>Fixed toast sample</p>
 				<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
 			</div>
 		</div>
