--- a/urbanstory/src/css/sass/components/_forms.scss
+++ b/urbanstory/src/css/sass/components/_forms.scss
@@ -3,17 +3,28 @@ textarea,
 input[type=text],
 input[type=password],
 input[type=email],
-input[type=search]{
+input[type=search],
+select{
 	@include transition(cubic-bezier(0.11, 0.65, 0.73, 0.66), 0.2s);
 	outline: none;
 	border: solid 1px $c-grey-3;
 	line-height: 40px;
 	font-size:14px;
 	padding:0 $gutter-m;
+	// background:;
 	@include radius;
 	&:focus{
       @include box-shadow(0 0 0 3px rgba(black ,.25));
     }
+    &[disabled]{
+    	border: solid 1px $c-grey-2;
+    	cursor: not-allowed;
+    }
+}
+select{
+	height: 40px;
+	width: 100%;
+	background:white;
 }
 .input-form{
 	label:first-of-type{
@@ -23,9 +34,16 @@ input[type=search]{
 		margin-top:$gutter-l;
 	}
 	&.width-auto{
-		textarea, input{
+		textarea, input, select{
 			width: auto;
 		}
+	}
+	textarea{
+		resize:vertical;
+  		overflow:auto; 
+  		line-height: 1rem;
+  		padding:$gutter-m;
+  		min-height:64px;
 	}
 	textarea,
 	input{
