--- a/urbanstory/src/css/sass/components/_forms.scss
+++ b/urbanstory/src/css/sass/components/_forms.scss
@@ -46,7 +46,8 @@ select{
   		min-height:64px;
 	}
 	textarea,
-	input{
+	input,
+	select{
 		width: 100%;
 		& + label{
 			display:block;
@@ -59,6 +60,7 @@ select{
 		label{
 			color:$c-red-1;
 		}
+		select,
 		textarea,
 		input[type=text],
 		input[type=password],
@@ -75,6 +77,7 @@ select{
 		label{
 			color:$c-yellow-1;
 		}
+		select,
 		textarea,
 		input[type=text],
 		input[type=password],
@@ -91,6 +94,7 @@ select{
 		label{
 			color:$c-green-1;
 		}
+		select,
 		textarea,
 		input[type=text],
 		input[type=password],
@@ -107,6 +111,7 @@ select{
 		label{
 			color:$c-median-1;
 		}
+		select,
 		textarea,
 		input[type=text],
 		input[type=password],
