--- a/urbanstory/src/css/sass/components/_variables.scss
+++ b/urbanstory/src/css/sass/components/_variables.scss
@@ -37,6 +37,8 @@ $c-grey-4:#A3A3A3;
 $c-grey-5:#757575;
 $c-grey-6:#212121;
 
+$c-border:$c-grey-2;
+
 $gutter-xxl:64px;
 $gutter-xl:32px;
 $gutter-l:16px;
