--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -329,8 +329,8 @@ figcaption {
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
-  padding-right: 2rem;
-  padding-left: 2rem;
+  padding-right: 32px;
+  padding-left: 32px;
 }
 
 .row {
@@ -347,8 +347,8 @@ figcaption {
   flex-direction: row;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-right: -16px;
-  margin-left: -16px;
+  margin-right: -8px;
+  margin-left: -8px;
 }
 
 .row.reverse {
@@ -1314,11 +1314,13 @@ select {
   min-height: 64px;
 }
 .input-form textarea,
-.input-form input {
+.input-form input,
+.input-form select {
   width: 100%;
 }
 .input-form textarea + label,
-.input-form input + label {
+.input-form input + label,
+.input-form select + label {
   display: block;
   color: #A3A3A3;
   font-size: 0.75rem;
@@ -1327,6 +1329,7 @@ select {
 .input-form.is-danger label {
   color: #EF4344;
 }
+.input-form.is-danger select,
 .input-form.is-danger textarea,
 .input-form.is-danger input[type=text],
 .input-form.is-danger input[type=password],
@@ -1334,6 +1337,7 @@ select {
 .input-form.is-danger input[type=search] {
   border: solid 1px #EF4344;
 }
+.input-form.is-danger select:focus,
 .input-form.is-danger textarea:focus,
 .input-form.is-danger input[type=text]:focus,
 .input-form.is-danger input[type=password]:focus,
@@ -1346,6 +1350,7 @@ select {
 .input-form.is-warning label {
   color: #FFCE07;
 }
+.input-form.is-warning select,
 .input-form.is-warning textarea,
 .input-form.is-warning input[type=text],
 .input-form.is-warning input[type=password],
@@ -1353,6 +1358,7 @@ select {
 .input-form.is-warning input[type=search] {
   border: solid 1px #FFCE07;
 }
+.input-form.is-warning select:focus,
 .input-form.is-warning textarea:focus,
 .input-form.is-warning input[type=text]:focus,
 .input-form.is-warning input[type=password]:focus,
@@ -1365,6 +1371,7 @@ select {
 .input-form.is-success label {
   color: #2FBD90;
 }
+.input-form.is-success select,
 .input-form.is-success textarea,
 .input-form.is-success input[type=text],
 .input-form.is-success input[type=password],
@@ -1372,6 +1379,7 @@ select {
 .input-form.is-success input[type=search] {
   border: solid 1px #2FBD90;
 }
+.input-form.is-success select:focus,
 .input-form.is-success textarea:focus,
 .input-form.is-success input[type=text]:focus,
 .input-form.is-success input[type=password]:focus,
@@ -1384,6 +1392,7 @@ select {
 .input-form.is-info label {
   color: #2791D9;
 }
+.input-form.is-info select,
 .input-form.is-info textarea,
 .input-form.is-info input[type=text],
 .input-form.is-info input[type=password],
@@ -1391,6 +1400,7 @@ select {
 .input-form.is-info input[type=search] {
   border: solid 1px #2791D9;
 }
+.input-form.is-info select:focus,
 .input-form.is-info textarea:focus,
 .input-form.is-info input[type=text]:focus,
 .input-form.is-info input[type=password]:focus,
