--- a/urbanstory/src/css/index.css
+++ b/urbanstory/src/css/index.css
@@ -276,14 +276,14 @@ code {
   border-radius: 4px;
 }
 
-/*evelyn's visual language css!*/
-/*--------starthere--------*/
+/*evelyn's visual language css!--start*/
 .page-illustrations {
   overflow: auto;
   clear: left;
 }
 
 .lists {
+  /*border: 1px solid red;*/
   position: relative;
   float: left;
   overflow: auto;
@@ -291,6 +291,7 @@ code {
 }
 
 .cards-1 {
+  /*border: 1px solid red;*/
   position: relative;
   float: left;
   align-content: center;
@@ -300,6 +301,7 @@ code {
 }
 
 .cards-2 {
+  /*border: 1px solid red;*/
   position: relative;
   float: left;
   align-content: center;
@@ -312,7 +314,95 @@ code {
   margin-right: 10px;
 }
 
-/*evelyn's visual language css!*/
+/*evelyn's visual language css!--end*/
+
+/*evelyn's logo css!--start*/
+.page-content{
+  /*border: 1px solid red;*/
+  overflow: auto;
+}
+
+.text-box{
+  /*border: 1px solid red;*/
+  float: left;
+  width: 400px;
+  overflow: auto;
+  font-size: 11pt;
+  margin: 0px 20px 0px 30px;
+}
+
+.cards-style{
+  margin-right: 20px; 
+  border-width: 1px;
+  border-style: dashed;
+  border-color: rgba(8, 20, 55, 0.2);
+}
+
+.cards-style-negative{
+  margin-right: 20px;
+  border: 1px solid;
+  border-color: rgba(8, 20, 55, 0.2);
+  background-color: rgba(8, 20, 55, 0.2); 
+}
+
+.space {
+  /*border: 1px solid red;*/
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.ve-line{
+  /*border: 1px solid red;*/
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 10px;
+  float: left;
+  position: relative;
+  height: 100px;
+  width: 2px;
+  background-color: rgba(8, 20, 55, 0.2);
+}
+
+.logohero{
+  margin: 10px 10px 10px 10px;
+}
+
+.list-2{
+  /*border: 1px solid red;*/
+  float: left;
+  position: relative;
+  overflow: auto;
+  margin-left: 10px; 
+  padding: 20px 20px 20px 20px;
+}
+
+.explanation{
+  /*border: 1px solid red;*/
+  float: left;
+  width: 400px;
+  overflow: auto;
+  font-size: 11pt;
+  margin: 10px 10px 10px 10px;
+}
+
+.ho-line{
+  /*border: 1px solid red;*/
+  float: left;
+  position: relative;
+  width: 100%;
+  height: 2px;
+  background-color: rgba(8, 20, 55, 0.2);
+}
+
+.subheadline{
+  margin-left: 20px;
+}
+
+
+
+
+/*evelyn's logo css--end*/
 /*---------ends here--------*/
+
 
 /*# sourceMappingURL=index.css.map */
